<resources>
    <string name="app_name">Prak1</string>
    <string name="textview">TextView</string>
    <string name="iwan">Iwan</string>
    <string name="_082217844036">082217844036</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="sape_i">SAPE\'I</string>
    <string name="button3">Button</string>
    <string name="button4" />
    <string name="button_1">button 1</string>
    <string name="button_2">button 2</string>
    <string name="match_parent">match parent</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="select_your_motorcycle">select your motorcycle</string>
    <string name="select_your_mototrcycle">select your mototrcycle</string>
</resources>