<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        app:srcCompat="@drawable/bmw1"
        tools:ignore="ContentDescription,InefficientWeight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="UselessLeaf" >

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_1"
            tools:ignore="ButtonStyle,InefficientWeight,RtlHardcoded" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:text="@string/button_2"
            tools:ignore="ButtonStyle,InefficientWeight,RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">


        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_height="wrap_content"
            android:text="@string/match_parent" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/right"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/left" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/panah3"
                tools:ignore="ContentDescription,InefficientWeight" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_height="match_parent"
                android:text="@string/select_your_mototrcycle" />

            <ImageView
                android:layout_gravity=""
                android:id="@+id/imageView8"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/panah2"
                tools:ignore="ContentDescription,RtlHardcoded" />



        </LinearLayout>
    </LinearLayout>

</LinearLayout>